Bug 15174 - smbXsrv_connection_shutdown_send result leaked
Summary: smbXsrv_connection_shutdown_send result leaked
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.17.0rc5
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-14 23:59 UTC by Stefan Metzmacher
Modified: 2022-12-15 16:33 UTC (History)
2 users (show)

See Also:


Attachments
git-am fix for 4.16.next, 4.15.next. (1.33 KB, patch)
2022-09-23 21:57 UTC, Jeremy Allison
npower: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Metzmacher 2022-09-14 23:59:09 UTC
smbd_server_connection_terminate_done() doesn't free the subreq
after calling smbXsrv_connection_shutdown_recv()...
Comment 1 Samba QA Contact 2022-09-23 09:52:12 UTC
This bug was referenced in samba master:

b600b0c8d9690cb5eeded1e5925c8e667c11af04
Comment 2 Jeremy Allison 2022-09-23 21:57:45 UTC
Created attachment 17530 [details]
git-am fix for 4.16.next, 4.15.next.

Cherry-picked from master.
Comment 3 Noel Power 2022-09-26 09:18:53 UTC
Comment on attachment 17530 [details]
git-am fix for 4.16.next, 4.15.next.

lgtm
Comment 4 Noel Power 2022-09-26 09:22:22 UTC
reassign to Jule for inclusion in 4.17,4.16, 4.15
Comment 5 Jule Anger 2022-09-28 08:44:14 UTC
Pushed to autobuild-v4-{17,16,15}-test.
Comment 6 Samba QA Contact 2022-09-28 09:37:03 UTC
This bug was referenced in samba v4-15-test:

d4e11e82ecd94e0c3aa25ca07a476619b7a9b1a5
Comment 7 Samba QA Contact 2022-09-28 15:41:48 UTC
This bug was referenced in samba v4-15-stable (Release samba-4.15.10):

d4e11e82ecd94e0c3aa25ca07a476619b7a9b1a5
Comment 8 Samba QA Contact 2022-09-28 20:11:03 UTC
This bug was referenced in samba v4-16-test:

2f71273a73673da7d2a12e61cbcc3242b2c9958a
Comment 9 Samba QA Contact 2022-10-07 10:00:20 UTC
This bug was referenced in samba v4-17-test:

7bef45d93047848c155935f9e5df7472dc31eef7
Comment 10 Jule Anger 2022-10-07 13:09:13 UTC
Closing out bug report.

Thanks!
Comment 11 Samba QA Contact 2022-10-19 12:25:13 UTC
This bug was referenced in samba v4-17-stable (Release samba-4.17.1):

7bef45d93047848c155935f9e5df7472dc31eef7
Comment 12 Samba QA Contact 2022-12-15 16:33:56 UTC
This bug was referenced in samba v4-16-stable (Release samba-4.16.8):

2f71273a73673da7d2a12e61cbcc3242b2c9958a